# SoftDesk

./: .gitignore  README.md  pyproject.toml
SoftDesk/Projects/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
SoftDesk/Projects/migrations/: 0001_initial.py  0002_initial.py  0002_remove_issue_comments_comment_issue_issue_project.py  0003_alter_comment_author_alter_comment_contributor_and_more.py  0003_alter_contribution_user.py  0004_alter_comment_id.py  0004_remove_comment_contributor.py  0005_alter_issue_affected_to.py  0006_alter_contribution_project_alter_contribution_user.py  0007_remove_project_contributors.py
SoftDesk/SoftDesk/: settings.py  urls.py
SoftDesk/Users/: admin.py  models.py  serializers.py  views.py
SoftDesk/Users/migrations/: 0001_initial.py  0002_delete_contributor_remove_anyuser_is_contributor.py
